[package]
name = "tokio-par-stream"
authors = ["Vrtgs"]
repository = "https://github.com/Vrtgs/tokio-par-stream.git"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }