[package]
name = "tokio-par-stream"
authors = ["Vrtgs"]
repository = "https://github.com/Vrtgs/tokio-par-stream.git"
license = "MIT OR Apache-2.0"
description = "parallel streams powered by tokio"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }